# ChangeLog for dev-python/twisted-words
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-words/ChangeLog,v 1.60 2011/01/25 17:06:45 jer Exp $

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> twisted-words-10.2.0-r1.ebuild:
  Stable for HPPA (bug #350894).

  21 Jan 2011; Thomas Kahle <tomka@gentoo.org> twisted-words-10.2.0-r1.ebuild:
  x86 stable per bug 350894

*twisted-words-10.2.0-r1 (19 Jan 2011)

  19 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -twisted-words-10.2.0.ebuild, +twisted-words-10.2.0-r1.ebuild,
  +files/twisted-words-10.2.0-twisted.words.protocols.jabber.jstrports.parse.patch:
  Fix regression in twisted.words.protocols.jabber.jstrports.parse() (bug #351468).
  Straight to stable on architectures, on which 10.2.0 was stable.

  12 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  twisted-words-10.2.0.ebuild:
  Stable on amd64 wrt bug #350894

  06 Jan 2011; Brent Baude <ranger@gentoo.org> twisted-words-10.2.0.ebuild:
  Marking twisted-words-10.2.0 ppc stable for bug 350894

  06 Jan 2011; Raúl Porcel <armin76@gentoo.org> twisted-words-10.2.0.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #333211

  28 Dec 2010; Brent Baude <ranger@gentoo.org> twisted-words-10.2.0.ebuild:
  Marking twisted-words-10.2.0 ppc64 for bug 333211

  23 Dec 2010; Thomas Kahle <tomka@gentoo.org> twisted-words-10.1.0.ebuild:
  x86 stable per bug 333389

*twisted-words-10.2.0 (22 Dec 2010)

  22 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +twisted-words-10.2.0.ebuild:
  Version bump.

  25 Oct 2010; Jeroen Roovers <jer@gentoo.org> twisted-words-10.1.0.ebuild:
  Stable for HPPA (bug #333211).

  18 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  twisted-words-10.1.0.ebuild:
  Stable on amd64 wrt bug #333211

*twisted-words-10.1.0 (09 Jul 2010)

  09 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +twisted-words-10.1.0.ebuild: