@@ -1,13 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX twisted-words-10.2.0-twisted.words.protocols.jabber.jstrports.parse.patch 2095 RMD160 8d910698fb3c997d5dc6be9a0c4f3cb1490bf24a SHA1 5f971d8f274104c5e7c78a8bfbe025ef07eb0f5f SHA256 6dc2b1bde649fdcd2434f97fc9354652dcd2dcf4fd681f6bd46e79d93da74781
-DIST TwistedWords-10.0.0.tar.bz2 179818 RMD160 94bd795ea844c790b277cd7cd25d9942f3f2e754 SHA1 efb2af37cf33847920fae39a9846ce45b6babf0a SHA256 83b48b3a7441fb4987c2e3122277b2204f26cea8a519d36dde816ab4b1c3b67f
-DIST TwistedWords-10.1.0.tar.bz2 180419 RMD160 aa83e3411007c0330f1bf493bae3dd842cd394b6 SHA1 04e1c050e5436f4afdc1a53cb56b7e25297bae08 SHA256 93a1a21d8cffe885f13e508204bf7c30e09a6c22001c944453eab44bbef2e646
 DIST TwistedWords-10.2.0.tar.bz2 180104 RMD160 480482e35a9e6d53af1ecbe7f3316a0f0098088a SHA1 514673c7f6ed3cd633523dc2a12d96d113d95c48 SHA256 aebd368c3d638208e28873c5b4262afc988e98fbb76076fb55c9d05388951ab5
-DIST TwistedWords-8.2.0.tar.bz2 174475 RMD160 eeda2b5e0b530ff151fa73498e6c9b7678c7a93d SHA1 177168f761904decb6910e03f1e649b6ea1a23ab SHA256 19000070b0c38bacc4a74dc315531973b2bc0ecf559575c908e7f023ce2bab9b
-DIST TwistedWords-9.0.0.tar.bz2 177228 RMD160 f2ac6deddb721f7a4cfba8235e94ed815e53dbd8 SHA1 eb60d371043b87fc1d636cecbfe9b7b168d2dc52 SHA256 481fc9c6255a29a4e10b06bc0506d262d25098f0a2de1350d2b0c588d27e4790
-EBUILD twisted-words-10.0.0.ebuild 837 RMD160 453c6ca80ab034b3ee44daad01efc778af90c833 SHA1 c74c1043b6c7b6cf28afc2402198835d68412eb2 SHA256 110bd3e96bfe32e345e774852b6d074d7f49002d1c8307c7edfdddc4226e5ec4
-EBUILD twisted-words-10.1.0.ebuild 851 RMD160 7b393564d272b300a54af0f294e835b397b566d4 SHA1 885d103ed1e7cd66f253745ff8db7a9cbbaa4ba3 SHA256 1c88aeb7de27ddd132623e16e822cebd8fae59890a155e2ea1954a5072250846
+DIST TwistedWords-11.0.0.tar.bz2 164453 RMD160 83150aa88b8b5b2e193675a27533d36553db7a47 SHA1 53efd150a46ab2c8d9b33d6748094a9c8b011910 SHA256 574ffbf706be8cc4281f2d64e006d5efa35fdaa611895494453ec9fb80cea8dd
 EBUILD twisted-words-10.2.0-r1.ebuild 982 RMD160 9d32cc6e7bbd541f55066de05629b5b1e60f1d05 SHA1 62dad9ec81c1be91650b5780b0bbaf91213d4d26 SHA256 b8876b1c42e17422313bc90db655e518af9a540d2b8a9b6d7f672fae64096bec
-EBUILD twisted-words-8.2.0.ebuild 825 RMD160 202a33c80c45942c3e02f006f08dff1d22970cbc SHA1 80675a3a76febaac25a5bae6154d731fbcfaa7ab SHA256 9101657da8631bed7536a50c94042aec07503ab68c7ec70de6ba80c2e46af13b
-EBUILD twisted-words-9.0.0.ebuild 828 RMD160 f9f2bc620fcdd81a24be1a95b06e00729a4f0f06 SHA1 2696f4a241accee31781f25875471831daad3b96 SHA256 ec84b87f8bae5e1e009ac2636adf7681bc32b503209f921847445c28cff31b04
-MISC ChangeLog 8401 RMD160 d7682062f7a941fadb2034f48454d4f3f5173c31 SHA1 54f40cd37cb0553ab38e1191ae00239b17545616 SHA256 9a08153ee74927617c71cb1deabffea20ad90090409e090073f77f39c2f5d291
+EBUILD twisted-words-11.0.0.ebuild 835 RMD160 d3f473b8c988bf24f1d3329da5e2d512273dba23 SHA1 7361805480f50929a2b5787fc21b3a8248b7f369 SHA256 c6e50c514af83fe0a753a074b99b1e6e9e1a183264122b61fddc298f720cd475
+MISC ChangeLog 8565 RMD160 840d181a42138ccaaeb44d4d7e795f151c96605a SHA1 c69b10a0e6a7698fd5e19cd8058c87a428721bfe SHA256 f498ae573e70e417b7dc1c557335cadfce5c49fad84ee0c3fb4b7a07d5972a55
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNmjMEAAoJENgZr6v6gHY0XSsP/0xQHK3QcxMl3JjO7rK/rr7s
+KvZ3vurG7veSwj60inDR2IHUlnTj3NxdAeGjkzdHQRTASjM+9QRATjd8fwHE0Af0
+kNSYFgzQ+Vc8Qt03r6HNpSY7ND7Z21RaZwqZkV8V3sAtodEyV5Oy2uj01hJdClui
+Hhp28QB2j1iFU1TiJ4fxjucnk0BCN72tsDnSNavNtUOqUUMENHyYg351pFEauHPL
+37P2U0ctWr5KG30kI5ISXLibkVOF07Yf2hQlaGmvp8EJvex40AnTfkYFO+tlV+V3
+G85PA5sUkBLnKkhvxBkROi2iu3oKfoO6BnHzEUkQ1YSwcdjafRcSJXLMjCOjQzuM
+xzIThDoXd5wbwP/Mqm1iOF6z4BnekonqqmfcGw8kSJJoI3h6o20mHiStUwuJg6/K
+wL5gWCwy1Pnk3k33r1+871d6LqCzizJKJ1ZZoDiECRHSXzabkLIAUKr744c2YyeA
+dk/kyXTifz+OQ6eCOQkBXP1yDxICJpXkKbjZGjsmXBEoP7+YrH/6gxoLwLgEYXTg
+uAvpGA2Lonn62GujiqlY3FjQcMnpG8tfUD0vtpHrQ4qviZBl+6fes6kYGQYqZsx7
+MwVj/wilk4SViW5WR4U6xphNophMbIeQKzSe8gwyhRyz2M30fKUElrhKw6qCACVa
+Y9OL12RLibBxZ/RXSug4
+=Okdy
+-----END PGP SIGNATURE-----
