@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/twisted-words
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-words/ChangeLog,v 1.60 2011/01/25 17:06:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-words/ChangeLog,v 1.61 2011/04/04 21:07:02 arfrever Exp $
+
+*twisted-words-11.0.0 (04 Apr 2011)
+
+  04 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +twisted-words-11.0.0.ebuild:
+  Version bump.
 
   25 Jan 2011; Jeroen Roovers <jer@gentoo.org> twisted-words-10.2.0-r1.ebuild:
   Stable for HPPA (bug #350894).
